# MC833-Projeto1

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  Makefile  README.md  meson.build  project.cppcheck  test.yaml
docs/: description.md
src/: alloc.h  defines.h  main.c  sqlite.h
src/database/: database.c  database.h  schema.h  schema.sql  sqlite_source.h
src/movie/: builder.c  builder.h  movie.h  parser.c  parser.h
src/net/: handler.c  handler.h  parser.c  parser.h
src/worker/: parser.c  parser.h  queue.c  queue.h  request.c  request.h  worker.c  worker.h
src/yaml/: parser.c  parser.h
